[gd_scene load_steps=3 format=3 uid="uid://drdm14b5pvj1j"]

[ext_resource type="Script" uid="uid://bgui5imk7bk58" path="res://scripts/systems/enemy_spawner.gd" id="1_f2tmk"]
[ext_resource type="PackedScene" uid="uid://b7aghcwevv3mr" path="res://scenes/enemies/enemy.tscn" id="2_s47tq"]

[node name="EnemySpawner" type="Node"]
script = ExtResource("1_f2tmk")
enemy_scene = ExtResource("2_s47tq")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SpawnPoints" type="Node" parent="."]

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-1240, -992)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-288, -984)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(400, -976)

[node name="SpawnPoint4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1040, -984)

[node name="SpawnPoint5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(880, 784)

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
